--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -76,6 +76,7 @@
     "test:e2e:ai:anthropic": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=anthropic-provider-config",
     "test:e2e:ai:custom": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=custom-provider-config",
     "test:e2e:ai:providers": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers",
+    "deploy-demo": "gh-pages -t -d docs/demo --dest gitguard",
     "lint": "eslint \"**/*.ts\"",
     "lint:fix": "eslint \"**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
@@ -105,6 +106,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@siteed/publisher": "workspace:^",
+    "@types/gh-pages": "^6",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.8.0",
@@ -114,6 +116,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-regexp": "^2.6.0",
+    "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.12.0",
