feat: add config options for package detection and complexity analysis
Added configuration options to enable/disable multi-package detection and complexity analysis features. Updated CommitAnalysisController to respect these settings and removed split suggestions after initial prompt. Updated documentation and default config values.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
       "cwd": "${workspaceFolder}/packages/gitguard",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/packages/gitguard/e2e/index.ts",
-      "args": ["--tests=branch-features", "--scenario=branch-split-suggestion", "--debug"],
+      // "args": ["--tests=branch-features", "--scenario=branch-split-suggestion", "--debug"],
+      "args": ["--tests=commit-message", "--scenario=multi-package", "--debug"],
       "runtimeArgs": [
         "--loader",
         "ts-node/esm",
