feat(ai): improve token management and template handling
- Remove selectBestDiff in favor of direct optimization
- Add DEFAULT_MAX_CLIPBOARD_TOKENS constant
- Enhance token limit handling in AI templates
- Update AI service configurations for consistent token limits
- Add multi-package detection flags in test utilities

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/packages/gitguard/e2e/index.ts",
       // "args": ["--tests=branch-features", "--scenario=branch-split-suggestion", "--debug"],
-      "args": ["--tests=commit-message", "--scenario=multi-package", "--debug"],
+      // "args": ["--tests=commit-message", "--scenario=multi-package", "--debug"],
+      "args": ["--tests=ai-suggestions", "--scenario=commit-ai-large", "--debug"],
       "runtimeArgs": [
         "--loader",
         "ts-node/esm",
