--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,9 @@
       "cwd": "${workspaceFolder}/packages/gitguard",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/packages/gitguard/e2e/index.ts",
-      "args": ["--tests=branch-features", "--scenario=branch-split-suggestion", "--debug"],
+      // "args": ["--tests=branch-features", "--scenario=branch-split-suggestion", "--debug"],
+      // "args": ["--tests=commit-message", "--scenario=multi-package", "--debug"],
+      "args": ["--tests=ai-suggestions", "--scenario=commit-ai-large", "--debug"],
       "runtimeArgs": [
         "--loader",
         "ts-node/esm",
