--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -27,31 +27,31 @@
     "@formatjs/intl-numberformat": "^8.10.3",
     "@formatjs/intl-pluralrules": "^5.2.14",
     "@formatjs/intl-relativetimeformat": "^11.2.14",
-    "@gorhom/bottom-sheet": "^5",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@gorhom/portal": "^1.0.14",
-    "@react-native-community/slider": "4.5.2",
+    "@react-native-community/slider": "4.5.5",
     "@react-navigation/drawer": "^6.6.15",
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.31",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "~15.0.3",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.8",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-localization": "~16.0.0",
+    "expo-router": "~4.0.7",
+    "expo-status-bar": "~2.0.0",
     "i18next": "^23.10.1",
     "intl-pluralrules": "^2.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-localize": "^3.2.1",
     "react-native-paper": "^5.12.3",
     "react-native-paper-dates": "^0.22.25",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.11",
     "testingui": "workspace:^"
@@ -59,7 +59,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/gh-pages": "^6",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
