--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -67,10 +67,10 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@evilmartians/lefthook": "^1.6.7",
     "@expo/vector-icons": "^14.0.2",
-    "@gorhom/bottom-sheet": "^5",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-native-community/slider": "^4.5.0",
     "@react-navigation/native": "^6.1.17",
@@ -102,7 +102,7 @@
     "@types/eslint": "^8",
     "@types/gh-pages": "^6",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18",
     "@types/rollup-plugin-peer-deps-external": "^2",
@@ -118,25 +118,25 @@
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
-    "expo": "^51.0.31",
-    "expo-clipboard": "~6.0.3",
-    "expo-localization": "~15.0.3",
+    "expo": "^52.0.8",
+    "expo-clipboard": "~7.0.0",
+    "expo-localization": "~16.0.0",
     "expo-module-scripts": "3.4.2",
     "gh-pages": "^6.1.1",
     "jest": "^29.7.0",
     "os-browserify": "^0.3.0",
     "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-jazzicon": "^0.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dates": "^0.22.25",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "^3.34.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10",
