--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -30,28 +30,28 @@
     "@gorhom/bottom-sheet": "^5.0.6",
     "@gorhom/portal": "^1.0.14",
     "@react-native-community/slider": "4.5.5",
-    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/drawer": "^7.0.0",
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
     "date-fns": "^3.6.0",
-    "expo": "^52.0.8",
+    "expo": "^52.0.11",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
-    "expo-router": "~4.0.7",
+    "expo-router": "~4.0.9",
     "expo-status-bar": "~2.0.0",
     "i18next": "^23.10.1",
     "intl-pluralrules": "^2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-localize": "^3.2.1",
     "react-native-paper": "^5.12.3",
     "react-native-paper-dates": "^0.22.25",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "^4.0.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.11",
     "testingui": "workspace:^"
