feat: enhance changelog functionality and add @inquirer/prompts dependency
- Added @inquirer/prompts dependency to package.json and yarn.lock for improved user prompts.
- Enhanced ChangelogService with new methods for generating, updating, and validating changelog entries.
- Refactored ReleaseService to prepare changelog entries with better user interaction and confirmation.
- Updated tests to reflect changes in changelog handling and ensure proper functionality.

--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -38,6 +38,7 @@
     "setup-cli": "chmod +x setup-cli.sh && ./setup-cli.sh"
   },
   "dependencies": {
+    "@inquirer/prompts": "^7.1.0",
     "chalk": "4.1.2",
     "commander": "^11.1.0",
     "conventional-changelog": "^5.1.0",
