refactor(changelog): modernize changelog generation system
• Split changelog tests into separate specialized test files
• Improve version handling and date formatting consistency
• Add better support for conventional and keep-a-changelog formats
• Implement more robust section management and content normalization
• Add support for empty section handling and bullet point standardization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,7 @@
     "connectionId": "siteed",
     "projectKey": "deeeed_universe"
   },
-  "jestrunner.jestCommand": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node_modules/.bin/jest",
+  "jestrunner.jestCommand": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node_modules/.bin/jest --runInBand --detectOpenHandles",
   "jestrunner.debugOptions": {
     "env": {
       "NODE_OPTIONS": "--experimental-vm-modules --no-warnings",
