--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -35,7 +35,10 @@
     "publisher": "ts-node bin/publisher.ts",
     "publisher:debug": "DEBUG=true node --inspect -r ts-node/register bin/publisher.ts",
     "prepare": "husky install",
-    "setup-cli": "chmod +x setup-cli.sh && ./setup-cli.sh"
+    "setup-cli": "chmod +x setup-cli.sh && ./setup-cli.sh",
+    "test:e2e": "ts-node ./e2e/index.ts",
+    "test:e2e:release": "ts-node ./e2e/index.ts --tests=release",
+    "test:e2e:changelog": "ts-node ./e2e/index.ts --tests=changelog"
   },
   "dependencies": {
     "@inquirer/prompts": "^7.1.0",
