--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -68,6 +68,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-regexp": "^2.7.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
