--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -34,11 +34,11 @@
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
     "date-fns": "^3.6.0",
-    "expo": "^52.0.11",
+    "expo": "^52.0.17",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
-    "expo-router": "~4.0.9",
+    "expo-router": "~4.0.11",
     "expo-status-bar": "~2.0.0",
     "i18next": "^23.10.1",
     "intl-pluralrules": "^2.0.1",
@@ -51,7 +51,7 @@
     "react-native-paper-dates": "^0.22.25",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.11",
     "testingui": "workspace:^"
