--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -31,7 +31,7 @@
     "storybook": "storybook dev -p 6060",
     "build:storybook": "NODE_ENV=production storybook build",
     "deploy:storybook": "rimraf storybook-static && yarn build:storybook && gh-pages -t -d storybook-static --dest design-system-storybook",
-    "release": "yarn clean && yarn build && npm publish"
+    "release": "yarn clean && yarn build && publisher release"
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
