--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siteed/publisher",
-  "version": "0.4.18",
+  "version": "0.4.19-alpha.0",
   "description": "Flexible release management tool for JavaScript/TypeScript monorepos",
   "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
   "license": "MIT",
