--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -30,8 +30,7 @@
     "size": "bundle-size && size-limit",
     "storybook": "storybook dev -p 6060",
     "build:storybook": "NODE_ENV=production storybook build",
-    "deploy:storybook": "rimraf storybook-static && yarn build:storybook && gh-pages -t -d storybook-static --dest design-system-storybook",
-    "release": "yarn clean && yarn typecheck && yarn build && publisher release"
+    "deploy:storybook": "rimraf storybook-static && yarn build:storybook && gh-pages -t -d storybook-static --dest design-system-storybook"
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
