--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -32,6 +32,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.5",
     "@react-navigation/drawer": "^7.0.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
     "date-fns": "^3.6.0",
