--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -27,7 +27,7 @@
     "@formatjs/intl-numberformat": "^8.10.3",
     "@formatjs/intl-pluralrules": "^5.2.14",
     "@formatjs/intl-relativetimeformat": "^11.2.14",
-    "@gorhom/bottom-sheet": "^5",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.5",
@@ -42,6 +42,7 @@
     "expo-localization": "~16.0.0",
     "expo-router": "~4.0.16",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "^4.0.8",
     "i18next": "^23.10.1",
     "intl-pluralrules": "^2.0.1",
     "react": "18.3.1",
@@ -51,7 +52,7 @@
     "react-native-localize": "^3.2.1",
     "react-native-paper": "^5.13.1",
     "react-native-paper-dates": "^0.22.25",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.0.3",
