--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,7 +40,7 @@
       "skipFiles": ["<node_internals>/**"],
       "cwd": "${workspaceFolder}/packages/gitguard",
       "program": "${workspaceFolder}/packages/gitguard/src/cli/gitguard.ts",
-      "args": ["commit",  "--ai", "--debug"],
+      "args": ["branch",  "edit", "--debug", "--cwd", "/Volumes/c910ssd/dev/@siteed/universe/packages/gitguard"],
       "runtimeArgs": [
         "--loader",
         "ts-node/esm",
