--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -27,42 +27,42 @@
     "@formatjs/intl-numberformat": "^8.10.3",
     "@formatjs/intl-pluralrules": "^5.2.14",
     "@formatjs/intl-relativetimeformat": "^11.2.14",
-    "@gorhom/bottom-sheet": "^5.0.6",
+    "@gorhom/bottom-sheet": "^5.1.4",
     "@gorhom/portal": "^1.0.14",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/slider": "4.5.5",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
     "date-fns": "^3.6.0",
-    "expo": "^52.0.32",
-    "expo-constants": "~17.0.5",
-    "expo-linking": "~7.0.5",
-    "expo-localization": "~16.0.0",
-    "expo-router": "~4.0.16",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "^4.0.8",
+    "expo": "^53.0.8",
+    "expo-constants": "~17.1.6",
+    "expo-linking": "~7.1.4",
+    "expo-localization": "~16.1.5",
+    "expo-router": "~5.0.6",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
     "i18next": "^23.10.1",
     "intl-pluralrules": "^2.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-localize": "^3.2.1",
-    "react-native-paper": "^5.13.1",
+    "react-native-paper": "^5.14.0",
     "react-native-paper-dates": "^0.22.25",
-    "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "^0.19.11",
+    "react-native-web": "^0.20.0",
     "testingui": "workspace:^"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/gh-pages": "^6",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
@@ -71,7 +71,7 @@
     "rimraf": "^6.0.1",
     "serve": "^14.2.3",
     "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
+    "typescript": "^5.8.3"
   },
   "resolutions": {
     "@siteed/react-native-logger": "0.8.2"
