--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -65,13 +65,13 @@
     "@chromatic-com/storybook": "^3.2.2",
     "@commitlint/config-conventional": "^19.1.0",
     "@evilmartians/lefthook": "^1.6.7",
-    "@expo/vector-icons": "^14.0.2",
-    "@gorhom/bottom-sheet": "^5",
+    "@expo/vector-icons": "^14.1.0",
+    "@gorhom/bottom-sheet": "^5.1.4",
     "@gorhom/portal": "^1.0.14",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@react-native-community/slider": "^4.5.0",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/native": "^6.1.17",
     "@release-it/conventional-changelog": "^8.0.1",
     "@rollup/plugin-babel": "^6.0.4",
@@ -100,7 +100,7 @@
     "@types/eslint": "^8",
     "@types/gh-pages": "^6",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18",
     "@types/rollup-plugin-peer-deps-external": "^2",
@@ -116,28 +116,28 @@
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
-    "expo": "^52.0.24",
-    "expo-clipboard": "~7.0.0",
-    "expo-localization": "~16.0.0",
+    "expo": "^53.0.8",
+    "expo-clipboard": "~7.1.4",
+    "expo-localization": "~16.1.5",
     "expo-module-scripts": "3.4.2",
     "gh-pages": "^6.1.1",
     "jest": "^29.7.0",
     "os-browserify": "^0.3.0",
     "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-gesture-handler": "~2.20.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-jazzicon": "^0.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dates": "^0.22.25",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "^0.19.10",
+    "react-native-web": "^0.20.0",
     "react-test-renderer": "^18.2.0",
     "release-it": "^17.1.1",
     "rimraf": "^5.0.5",
@@ -153,7 +153,7 @@
     "size-limit": "^11.1.2",
     "storybook": "^8.4.7",
     "tty-browserify": "^0.0.1",
-    "typescript": "~5.3.3",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^7.4.0"
   },
   "publishConfig": {
