docs: update CONTRIBUTING.md, DEPLOYMENT.md, OPENDRAWER.md, and README.md for improved clarity and formatting; refine TypeScript configuration files for consistency

--- a/packages/design-system/publisher.config.json
+++ b/packages/design-system/publisher.config.json
@@ -19,10 +19,7 @@
     "push": true,
     "commitMessage": "chore(@siteed/design-system): release ${version}",
     "tag": true,
-    "allowedBranches": [
-      "main",
-      "master"
-    ],
+    "allowedBranches": ["main", "master"],
     "remote": "origin"
   },
   "npm": {
