--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -7,12 +7,8 @@
     "declarationMap": true,
     "sourceMap": true,
     "paths": {
-      "@siteed/design-system": [
-        "./src/index"
-      ],
-      "@siteed/react-native-logger": [
-        "../../packages/react-native-logger/src"
-      ]
+      "@siteed/design-system": ["./src/index"],
+      "@siteed/react-native-logger": ["../../packages/react-native-logger/src"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
@@ -20,10 +16,7 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "allowJs": false,
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
@@ -41,8 +34,5 @@
     "verbatimModuleSyntax": false,
     "types": ["jest", "node"]
   },
-  "exclude": [
-    "dist",
-    "node_modules",
-  ]
+  "exclude": ["dist", "node_modules"]
 }
