--- a/packages/design-system/tsconfig.build.json
+++ b/packages/design-system/tsconfig.build.json
@@ -1,9 +1,8 @@
-
 {
   "extends": "./tsconfig",
   "compilerOptions": {
     "types": ["node"]
   },
   "include": ["src"],
-  "exclude": ["**/*.stories.tsx","**/*.test.tsx"],
+  "exclude": ["**/*.stories.tsx", "**/*.test.tsx"]
 }
