--- a/examples/loggerdemo/package.json
+++ b/examples/loggerdemo/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "NODE_ENV=development expo start --port 7761",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
+    "android": "expo run:android",
     "ios": "NODE_ENV=development expo start --ios --port 7761",
     "web": "NODE_ENV=development expo start --web --port 7761",
     "test": "jest --watchAll",
@@ -22,32 +22,32 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@gorhom/bottom-sheet": "^5.0.0-alpha.9",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/drawer": "^6.6.15",
     "@siteed/react-native-logger": "workspace:^",
-    "expo": "^51.0.24",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "~15.0.3",
-    "expo-router": "~3.5.20",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^53.0.12",
+    "expo-constants": "~17.1.6",
+    "expo-linking": "~7.1.5",
+    "expo-localization": "~16.1.5",
+    "expo-router": "~5.1.0",
+    "expo-status-bar": "~2.2.3",
     "i18next": "^23.10.1",
     "intl-pluralrules": "^2.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "^0.19.11"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/gh-pages": "^6",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.0.10",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.0",
     "gh-pages": "^6.1.1",
@@ -55,7 +55,7 @@
     "rimraf": "^6.0.1",
     "serve": "^14.2.3",
     "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
