feat(logger): implement instance isolation and lazy initialization in the logger; enhance logging functionality with colorization and regex namespace optimization; update tests for new features and improve ESLint configuration

--- a/packages/react-native-logger/tsconfig.eslint.json
+++ b/packages/react-native-logger/tsconfig.eslint.json
@@ -10,5 +10,5 @@
     "./*.cjs",
     ".eslintrc.cjs",
   ],
-  "exclude": ["dist/**", "node_modules"]
+  "exclude": ["dist/**", "node_modules", "coverage/**", "*.config.ts"]
 }
