--- a/packages/react-native-logger/package.json
+++ b/packages/react-native-logger/package.json
@@ -23,6 +23,7 @@
     "test:coverage": "jest --coverage",
     "coverage:report": "jest --coverage && codecov -F react-native-logger",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "lint:fix": "eslint \"**/*.{js,ts,tsx}\" --fix",
     "release": "yarn clean && yarn build && npm publish"
   },
   "keywords": [
@@ -47,18 +48,18 @@
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.2.2",
     "@types/jest": "^29.5.13",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
     "codecov": "^3.8.3",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
-    "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-ft-flow": "^3.0.11",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^2.0.5",
+    "prettier": "^3.6.0",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.4",
     "typescript": "^5.0.2"
